support package code generate
