# app/Http/Controllers/API/GameAPIController.php
@@ -5,7 +5,6 @@ namespace App\Http\Controllers\API;
 use App\Http\Requests\API\CreateGameAPIRequest;
 use App\Http\Requests\API\UpdateGameAPIRequest;
 use App\Models\Game;
-use App\Repositories\GameRepository;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 use App\Http\Controllers\AppBaseController;
@@ -17,19 +16,11 @@ use App\Http\Resources\GameResource;
 
 class GameAPIController extends AppBaseController
 {
-    /** @var  GameRepository */
-    private $gameRepository;
-
-    public function __construct(GameRepository $gameRepo)
-    {
-        $this->gameRepository = $gameRepo;
-    }
-
     /**
      * @OA\Get(
      *      path="/games",
      *      summary="getGameList",
-     *      tags={"Game"},
+     *      tags={"Game 游戏管理"},
      *      description="Get all Games",
      *      @OA\Response(
      *          response=200,
@@ -39,6 +30,10 @@ class GameAPIController extends AppBaseController
      *              @OA\Property(
      *                  property="success",
      *                  type="boolean"
+     *              ),
+     *              @OA\Property(
+     *                  property="code",
+     *                  type="number",
      *              ),
      *              @OA\Property(
      *                  property="data",
@@ -53,13 +48,19 @@ class GameAPIController extends AppBaseController
      *      )
      * )
      */
+
     public function index(Request $request): JsonResponse
     {
-        $games = $this->gameRepository->all(
-            $request->except(['skip', 'limit']),
-            $request->get('skip'),
-            $request->get('limit')
-        );
+        $query = Game::query();
+
+        if ($request->get('skip')) {
+            $query->skip($request->get('skip'));
+        }
+        if ($request->get('limit')) {
+            $query->limit($request->get('limit'));
+        }
+
+        $games = $query->get();
 
         return $this->sendResponse(
             GameResource::collection($games),
@@ -71,7 +72,7 @@ class GameAPIController extends AppBaseController
      * @OA\Post(
      *      path="/games",
      *      summary="createGame",
-     *      tags={"Game"},
+     *      tags={"Game 游戏管理"},
      *      description="Create Game",
      *      @OA\RequestBody(
      *        required=true,
@@ -87,6 +88,10 @@ class GameAPIController extends AppBaseController
      *                  type="boolean"
      *              ),
      *              @OA\Property(
+     *                  property="code",
+     *                  type="number",
+     *              ),
+     *              @OA\Property(
      *                  property="data",
      *                  ref="#/components/schemas/Game"
      *              ),
@@ -98,11 +103,13 @@ class GameAPIController extends AppBaseController
      *      )
      * )
      */
+
     public function store(CreateGameAPIRequest $request): JsonResponse
     {
         $input = $request->all();
 
-        $game = $this->gameRepository->create($input);
+        /** @var Game $game */
+        $game = Game::create($input);
 
         return $this->sendResponse(
             new GameResource($game),
@@ -114,7 +121,7 @@ class GameAPIController extends AppBaseController
      * @OA\Get(
      *      path="/games/{id}",
      *      summary="getGameItem",
-     *      tags={"Game"},
+     *      tags={"Game 游戏管理"},
      *      description="Get Game",
      *      @OA\Parameter(
      *          name="id",
@@ -135,6 +142,10 @@ class GameAPIController extends AppBaseController
      *                  type="boolean"
      *              ),
      *              @OA\Property(
+     *                  property="code",
+     *                  type="number",
+     *              ),
+     *              @OA\Property(
      *                  property="data",
      *                  ref="#/components/schemas/Game"
      *              ),
@@ -146,10 +157,11 @@ class GameAPIController extends AppBaseController
      *      )
      * )
      */
+
     public function show($id): JsonResponse
     {
         /** @var Game $game */
-        $game = $this->gameRepository->find($id);
+        $game = Game::find($id);
 
         if (empty($game)) {
             return $this->sendError(
@@ -167,7 +179,7 @@ class GameAPIController extends AppBaseController
      * @OA\Put(
      *      path="/games/{id}",
      *      summary="updateGame",
-     *      tags={"Game"},
+     *      tags={"Game 游戏管理"},
      *      description="Update Game",
      *      @OA\Parameter(
      *          name="id",
@@ -192,6 +204,10 @@ class GameAPIController extends AppBaseController
      *                  type="boolean"
      *              ),
      *              @OA\Property(
+     *                  property="code",
+     *                  type="number",
+     *              ),
+     *              @OA\Property(
      *                  property="data",
      *                  ref="#/components/schemas/Game"
      *              ),
@@ -203,20 +219,20 @@ class GameAPIController extends AppBaseController
      *      )
      * )
      */
+
     public function update($id, UpdateGameAPIRequest $request): JsonResponse
     {
-        $input = $request->all();
-
         /** @var Game $game */
-        $game = $this->gameRepository->find($id);
+        $game = Game::find($id);
 
         if (empty($game)) {
-            return $this->sendError(
-                __('messages.not_found', ['model' => __('models/games.singular')])
-            );
+        return $this->sendError(
+            __('messages.not_found', ['model' => __('models/games.singular')])
+        );
         }
 
-        $game = $this->gameRepository->update($input, $id);
+        $game->fill($request->all());
+        $game->save();
 
         return $this->sendResponse(
             new GameResource($game),
@@ -228,7 +244,7 @@ class GameAPIController extends AppBaseController
      * @OA\Delete(
      *      path="/games/{id}",
      *      summary="deleteGame",
-     *      tags={"Game"},
+     *      tags={"Game 游戏管理"},
      *      description="Delete Game",
      *      @OA\Parameter(
      *          name="id",
@@ -249,6 +265,10 @@ class GameAPIController extends AppBaseController
      *                  type="boolean"
      *              ),
      *              @OA\Property(
+     *                  property="code",
+     *                  type="number",
+     *              ),
+     *              @OA\Property(
      *                  property="data",
      *                  type="string"
      *              ),
@@ -260,10 +280,11 @@ class GameAPIController extends AppBaseController
      *      )
      * )
      */
+
     public function destroy($id): JsonResponse
     {
         /** @var Game $game */
-        $game = $this->gameRepository->find($id);
+        $game = Game::find($id);
 
         if (empty($game)) {
             return $this->sendError(
